--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-vue-app",
+  "name": "electron-app",
   "private": true,
   "version": "0.0.0",
   "main": "dist/electron-main/index.js",
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.2.30",
+    "fast-glob": "^3.2.12",
+    "sass": "^1.58.2",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.15"
   },
@@ -19,6 +24,7 @@
     "electron-builder": "^23.0.3",
     "electron-devtools-installer": "^3.2.0",
     "rimraf": "^3.0.2",
+    "svg-sprite-loader": "^6.0.11",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vite-plugin-electron": "^0.4.5",
